# Aether

./: .env.example  .gitignore  pyproject.toml  pyrightconfig.json  readme.md
backend/harness/aether/: ARCHITECTURE.md  __init__.py  pyproject.toml
backend/harness/aether/cli/: activity.py  app.py  banner.py  commands.py  main.py  repl.py  theme.py  tool_groups.py  tool_permission_prompter.py  ui.py  ui_middleware.py
backend/harness/aether/config/: __init__.py  env_loader.py  schema.py
backend/harness/aether/guardrails/: __init__.py  middleaware.py
backend/harness/aether/memory/: __init__.py  null.py  project_store.py
backend/harness/aether/runtime/: __init__.py  contracts.py  error_classifier.py  exceptions.py  hooks.py  interrupt_signal.py  interrupts.py  iteration_budget.py  lsp_client.py  lsp_manager.py  lsp_servers.py  provider_errors.py  reasoning.py  recovery.py  response_classification.py  services.py  session_runtime.py  session_state.py  state_machine.py  steer.py  tool_permissions.py  trajectory.py  usage.py
backend/harness/aether/subagents/: contracts.py  default_builder.py  manager.py
backend/harness/aether/tests/: README.md  __init__.py  test_browser_manager.py  test_builtin_tools.py  test_cheap_tool_refund.py  test_cli_app.py  test_cli_commands.py  test_cli_main.py  test_cli_prefs.py  test_cli_ui.py  test_engine.py  test_error_classifier.py  test_fallback_chain.py  test_lsp_client.py  test_lsp_manager.py  test_lsp_tool.py  test_max_iterations_summary.py  test_provider_streaming.py  test_recovery_strategy.py  test_response_validation.py  (+12 more)
(+686 files in other folders)
