[project]
name = "aether-harness"
version = "0.1.0"
description = "Aether agent harness framework"
requires-python = ">=3.12"
dependencies = [
    "agent-client-protocol>=0.4.0",
    "agent-sandbox>=0.0.19",
    "dotenv>=0.9.9",
    "exa-py>=1.0.0",
    "httpx>=0.28.0",
    "kubernetes>=30.0.0",
    "langfuse>=3.4.1",
    "markdownify>=1.2.2",
    "markitdown[all,xlsx]>=0.0.1a2",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "readabilipy>=0.3.0",
    "tavily-python>=0.7.17",
    "firecrawl-py>=1.15.0",
    "tiktoken>=0.8.0",
    "ddgs>=9.10.0",
    "duckdb>=1.4.4",
]

[project.optional-dependencies]
pymupdf = ["pymupdf4llm>=0.0.17"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aether"]
